fix for content overflow

--- a/src/Components/header.css
+++ b/src/Components/header.css
@@ -2,6 +2,7 @@
   grid-area: header;
   background-color: rgb(31, 31, 49);
   padding: 0.5rem;
+  overflow: hidden;
 }
 .navbar {
   display: flex;
