--- a/src/Components/main.css
+++ b/src/Components/main.css
@@ -6,6 +6,7 @@
   min-height: 70vh;
   background-color: rgb(53, 53, 63);
   color: #ffffff;
+  padding: 2rem;
 }
 
 ul {
